--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^5.4.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-navigation": "^3.7.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5"
   },
